Fix #3616: don't hide embed previsualization button on small screen

--- a/src/components/share/style/share.less
+++ b/src/components/share/style/share.less
@@ -64,15 +64,6 @@
       overflow: hidden;
       text-overflow: ellipsis;
     }
-
-    @media (max-width: @screen-tablet) {
-      .input-group {
-        width: 100%;
-      }
-      .input-group-btn {
-        display: none;
-      }
-    }
   }
 }
 
